# Sonata

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/kamiruku/sonata/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sonata.cpp  taglib.cpp
app/src/main/cpp/taglib_dir/: CMakeLists.txt  taglib.cpp
app/src/main/java/com/kamiruku/sonata/: FileSort.kt  HandleFragment.kt  MainActivity.kt  MediaStoreSource.kt  NavHost.kt  Navigator.kt  SelectionBar.kt  SharedViewModel.kt  SonataApp.kt  SonataNavHost.kt  Song.kt  SwipeBackContainer.kt
app/src/main/java/com/kamiruku/sonata/datastore/: DataStoreInstance.kt  DataStoreViewModel.kt
app/src/main/java/com/kamiruku/sonata/db/: Converters.kt  PathDate.kt  SonataDatabase.kt  SongDao.kt  SongEntity.kt  SongRepository.kt
app/src/main/java/com/kamiruku/sonata/features/search/: SearchScreen.kt
app/src/main/java/com/kamiruku/sonata/features/settings/: FolderPicker.kt  LibraryScreen.kt  SettingsScreen.kt
app/src/main/java/com/kamiruku/sonata/navigation/: BottomBar.kt  Helper.kt  NavigationState.kt  Navigator.kt  SonataRoute.kt
app/src/main/java/com/kamiruku/sonata/state/: DirectionalLazyListState.kt
app/src/main/java/com/kamiruku/sonata/taglib/: TagLib.kt  TagLibObject.kt
app/src/main/java/com/kamiruku/sonata/ui/components/: SongDetailsDialog.kt
app/src/main/java/com/kamiruku/sonata/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/kamiruku/sonata/utils/: Util.kt
app/src/main/res/layout/: fragment_handle.xml  main_activity.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/kamiruku/sonata/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
